:bug: Fix screen overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -149,7 +149,7 @@ h1 {
   background: linear-gradient(to bottom, #99ccff, #d9ecff);
 }
 .major .container {
-  width: 1100px;
+  width: 80%;
   position: relative;
   z-index: 999;
   margin: auto auto;
